--- a/App2/App2/.vscode/launch.json
+++ b/App2/App2/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "ExceptionHandling",
+            "request": "launch",
+            "mainClass": "lesson3.ExceptionHandling",
+            "projectName": "App2_5baa47cc"
+        },
+        {
+            "type": "java",
             "name": "nthPowerDimention",
             "request": "launch",
             "mainClass": "lesson3.nthPowerDimention",
